# scripts

./: README.md  density.py  diffusion.jl  persistence.gp  plecflag.jl  plot  plot-kymograph.gp  plotm  plotsave  twcorrel.jl  twist.py  twr_linear.py  writhe.pyx
gnuplotutils/: .hgignore  CMakeLists.txt  TODO  config.t2t  gp2eps  gp2eps.t2t  gplot  gplot.t2t  tricktex
gnuplotutils/.hg/: dirstate  hgrc  undo.desc
gnuplotutils/.hg/cache/: branch2-served
gnuplotutils/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
gnuplotutils/.hg/store/data/: _c_make_lists.txt.i  _makefile.am.i  _t_o_d_o.i  bbox__add.pl.i  bootstrap.i  config.t2t.i  configure.in.i  gp2eps.i  gp2eps.t2t.i  gplot.i  gplot.t2t.i  tricktex.i  ~2ehgignore.i
gnuplotutils/.hg/store/data/cmake/: _find_t_x_t2_t_a_g_s.cmake.i  cmake__uninstall.cmake.in.i
gnuplotutils/.hg/store/data/contrib/: demo.sh.i  to__wiki.sh.i
gnuplotutils/.hg/store/data/doc/: _makefile.am.i  _makefile.i  config.t2t.i  gp2eps.t2t.i  gplot.t2t.i  to__wiki.sh.i
gnuplotutils/.hg/store/data/examples/: _makefile.am.i  demo.sh.i
gnuplotutils/.hg/store/data/extras/: demo.sh.i  to__wiki.sh.i
gnuplotutils/extras/: demo.sh  to_wiki.sh
